style.css
* {
    text-decoration: none;
    list-style: none;
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
}

.header {
    display: flex;
    align-items: center;
    text-align: center;
    justify-content: space-between;
    padding: 20px 350px 0 350px;
}

.header-logo {
    font-size: 24px;
    font-weight: 900;
    color: #F9FAF8
}

.header-links, a {
    display: flex;
    font-size: 18px;
    gap: 18px;
    color: #E5E7EB;
}

.main {
    display: flex;
    align-items: center;
    text-align: left;
    justify-content: space-between;
    padding: 100px 350px 100px 350px;
    gap: 80px;
}

.main-title {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8
}

.main-text {
    font-size: 21px;
    font-weight: 400;
    padding: 12px 0;
    color: #E5E7EB;
}

.main-image {
    width: 600px;
    height: auto;
    border-radius: 8px;
}



.button-main {
    background-color: #3882F6;
    border: none;
    color: white;
    font-size: 18px;
    font-weight: 900;
    border-radius: 8px;
    padding: 8px 32px;
}

.header, .main {
    background-color: #1F2937;
}


.secondary-title {
    text-align: center;
    font-size: 36px;
    font-weight: 900;
    color: #1F2937;
    padding: 50px 0;
}

.secondary-container {
    display: flex;
    text-align: center;
    justify-content: space-between;
    padding: 0 550px 100px 550px;
}

.illustration {
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
    padding: 0;
    margin: 0;
}

.image {
    width: 150px;
    height: 150px;
    border: 4px solid #3882F6;
    border-radius: 12px;
}

.subtext {
    padding: 12px 0;
    width: 150px;
    color: #4B5563;
}

.quote-section {
    padding: 120px 550px;
    background-color: #E5E7EB;   
}

.quote-text {
    font-size: 36px;
    font-weight: 100;
    font-style: italic;
    color: #1F2937;
}

.author {
    text-align: right;
    padding-top: 12px;
    font-size: 24px;
    font-weight: 700;

}

#ital {
    font-style: italic;
}

.button-section {
    background-color: #3882F6;
    margin: 120px 350px;
    padding: 50px 120px;
    border-radius: 12px;
    display: flex;
    justify-content: space-between;
}

.button-title {
    font-size: 24px;
    font-weight: 800;
    color:#F9FAF8;
    padding-bottom: 2px;
}

.button-text {
    font-size: 16px;
    
    color:#F9FAF8;
}

.sign-up {
    background-color: #3882F6;
    color: white;
    font-size: 18px;
    font-weight: 900;
    border-radius: 8px;
    padding: 8px 32px;
    border: 2px solid #F9FAF8;
}

.footer {
    font-size: 18px;
    display: flex;
    justify-content: center;
    text-align: center;
    align-items:center;
    height: 100px;
    background-color: #1F2937;
    color:#F9FAF8;
}

